Correções feitas no, referência mento da label ao input e modificação na tag do botão cadastrar

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <label for="Nome">Nome:</label>
         <input type="text" id="Nome" placeholder="Digite seu nome:" />
         <br />
-        <label for="Nome">Email:</label>
+        <label for="Email">Email:</label>
         <input type="email" id="Email" placeholder="Digite seu email:" />
         <br />
-        <label for="Nome">Senha:</label>
+        <label for="Senha">Senha:</label>
         <input type="password" id="Senha" placeholder="Digite sua senha:" />
         <br />
-        <input type="submit" name="Enviar" id="" value="Cadastrar" />
+        <button>Cadastrar</button>
       </form>
     </main>
   </body>
